# PackageDashboard

./: .gitignore  Makefile  README.md
backend/: .gitignore  .secrets.example.toml  LICENSE  README.md  model.py  osv_ecosystem_map.json  pyproject.toml  repo_list.csv  settings.toml
backend/pkgdash/: __init__.py  common.py  config.py
backend/pkgdash/analyze/: utils.py
backend/pkgdash/analyze/github/: fetch_github.py  repo_act.py  similar.py  source.py  sourcelink.py
backend/pkgdash/analyze/maven/: analyzer.py  pkg.py
backend/pkgdash/analyze/npm/: api.py  depchase.py  exchange.py  meta.py
backend/pkgdash/analyze/pypi/: meta.py  utils.py
backend/pkgdash/analyze/rpm/: dep.py  depchase.py  meta.py  source.py
backend/pkgdash/analyze/vuln/: osv.py
backend/pkgdash/fetch/: file.py  utils.py
backend/pkgdash/fetch/github/: ghgql.py
backend/pkgdash/fetch/rpm/: meta.py
backend/pkgdash/models/: __init__.py  license_map.json  osv.schema.json  rpm.py  spdx_license.py
backend/pkgdash/models/connector/: clickhouse.py  mongo.py
backend/pkgdash/models/database/: deplink.py  osrepo.py  package.py  repository.py  sourcelink.py
backend/pkgdash/serve/: __main__.py  app.py
backend/pkgdash/serve/routes/: pkg.py  repo.py
frontend/: .env.example  .eslintrc  .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  auto-imports.d.ts  components.d.ts
frontend/src/api/: package.ts  repository.ts  request.ts  types.d.ts
frontend/src/components/: AlertItem.vue  BarChartCard.vue  BigStatsCard.vue  BottomPart.vue  (+12 more)
scripts/: bootstrap.sh  dev.sh
(+17 files in other folders)
